--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>This is my first version control commit!</h1>
+    <p>This code of a thing is getting inreresting</p>
 </body>
 </html>
